Lastfm: weaken deduplication